package de.fhro.wif.prg2.vererbung;

public class Schaltung {
	public void einlegen(int gang) {
		System.out.println("Gang " + gang + " eingelegt");
	}
}
