package de.fhro.wif.prg2.vererbung;

public class Zuendung {
	public void an() {
		System.out.println("Zuendung ist an");
	}
	public void start() {
		System.out.println("Anlasser dreht");
	}
	public void aus() {
		System.out.println("Zuendung ist aus");
	}
}
